--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark">
+<footer class="footer bg-dark fixed-bottom">
   <div class="container">
     <span class="text-muted text-center">
       Curso: <a href="https://www.udemy.com/angular-2-fernando-herrera/" target="_blank">https://www.udemy.com/angular-2-fernando-herrera/</a>
