--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -6,17 +6,15 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/calc']" routerLinkActive="router-link-active" >Calculadora<span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['/calc']" routerLinkActive="router-link-active">Calculadora</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link" [routerLink]="['/withcer-list']" routerLinkActive="router-link-active">The Witcher</a>
       </li>
     </ul>
   </div>
+  <form class="form-inline">
+    <input class="form-control mr-sm-2" type="search" placeholder="buscar the witcher" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+  </form>
 </nav>
