--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -5,11 +5,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/calc']" routerLinkActive="router-link-active">Calculadora</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/calc']" >Calculadora</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/withcer-list']" routerLinkActive="router-link-active">The Witcher</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/witcher-list']">The Witcher</a>
       </li>
     </ul>
   </div>
