--- a/src/app/Components/witcher-list/witcher-list.component.html
+++ b/src/app/Components/witcher-list/witcher-list.component.html
@@ -2,3 +2,17 @@
   <h1 class="display-4">Lista de Gerald De Rivia</h1>
   <p class="lead">todos las novelas de Gerarld de Rivia o The Witcher </p>
 </div>
+<div class="card-columns">
+  <div class="card" *ngFor="let libro of this.libros">
+    <img src="../../../assets/hulk.png" class="card-img-top" alt="test">
+    <div class="card-body">
+      <h5 class="card-title">{{libro.titulo}}</h5>
+      <div class="card-text">
+        <ul>
+          <li>año: {{libro.publicacion}}</li>
+          <li>Paginas: {{libro.paginas}}</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
