--- a/src/app/Components/witcher-list/witcher-list.component.html
+++ b/src/app/Components/witcher-list/witcher-list.component.html
@@ -3,8 +3,8 @@
   <p class="lead">todos las novelas de Gerarld de Rivia o The Witcher </p>
 </div>
 <div class="card-columns">
-  <div class="card" *ngFor="let libro of this.libros">
-    <img src="../../../assets/hulk.png" class="card-img-top" alt="test">
+  <div class="card" style="width: 18rem;" *ngFor="let libro of this.libros">
+    <img [src]="libro.img" class="card-img-top" [alt]="libro.img" height="381.33px">
     <div class="card-body">
       <h5 class="card-title">{{libro.titulo}}</h5>
       <div class="card-text">
@@ -13,6 +13,7 @@
           <li>Paginas: {{libro.paginas}}</li>
         </ul>
       </div>
+      <a [routerLink]="['/witcher-contra',libro.id]" class="btn btn-primary">Leer Contratapa</a>
     </div>
   </div>
 </div>
