--- a/src/app/Components/witcher-contra/witcher-contra.component.html
+++ b/src/app/Components/witcher-contra/witcher-contra.component.html
@@ -1,4 +1,8 @@
-<p>
-  {{this.leyenda}}
-</p>
+<h1>{{this.titulo}}</h1>
+<div class="card">
+  <div class="card-body">
+    {{this.leyenda}}
+  </div>
+</div>
+<br>
 <a [routerLink]="['/witcher-list']" class="btn btn-primary">Volver al listado</a>
