--- a/src/app/Components/witcher-list/witcher-list.component.html
+++ b/src/app/Components/witcher-list/witcher-list.component.html
@@ -13,7 +13,7 @@
           <li>Paginas: {{libro.paginas}}</li>
         </ul>
       </div>
-      <a [routerLink]="['/witcher-contra',libro.id]" class="btn btn-primary">Leer Contratapa</a>
+      <a [routerLink]="['/witcher-contra',libro.id,libro.titulo]" class="btn btn-primary">Leer Contratapa</a>
     </div>
   </div>
 </div>
