--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -14,7 +14,7 @@
     </ul>
   </div>
   <form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="buscar the witcher" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+    <input #ingreso (keyup.enter)="this.BuscarPersonaje(ingreso.value)" class="form-control mr-sm-2" type="search" placeholder="buscar personaje" aria-label="Search">
+    <button type="button" class="btn btn-outline-success my-2 my-sm-0" (click)="this.BuscarPersonaje(ingreso.value)">Buscar</button>
   </form>
 </nav>
