--- a/src/app/Components/witcher-contra/witcher-contra.component.html
+++ b/src/app/Components/witcher-contra/witcher-contra.component.html
@@ -5,4 +5,6 @@
   </div>
 </div>
 <br>
-<a [routerLink]="['/witcher-list']" class="btn btn-primary">Volver al listado</a>
+<div>
+  <a [routerLink]="['/witcher-list']" class="btn btn-primary">Volver al listado</a>
+</div>
