se combierte cada elemento de la lista en componente, se agrega pipes

--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -11,6 +11,9 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/witcher-list']">The Witcher</a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/pipes-father']">Pipes Section</a>
+      </li>
     </ul>
   </div>
   <form class="form-inline">
