--- a/src/app/Components/witcher-list/witcher-list.component.html
+++ b/src/app/Components/witcher-list/witcher-list.component.html
@@ -2,18 +2,10 @@
   <h1 class="display-4">Lista de Gerald De Rivia</h1>
   <p class="lead">todos las novelas de Gerarld de Rivia o The Witcher </p>
 </div>
-<div class="card-columns">
-  <div class="card" style="width: 18rem;" *ngFor="let libro of this.libros">
-    <img [src]="libro.img" class="card-img-top" [alt]="libro.img" height="381.33px">
-    <div class="card-body">
-      <h5 class="card-title">{{libro.titulo}}</h5>
-      <div class="card-text">
-        <ul>
-          <li>año: {{libro.publicacion}}</li>
-          <li>Paginas: {{libro.paginas}}</li>
-        </ul>
-      </div>
-      <a [routerLink]="['/witcher-contra',libro.id,libro.titulo]" class="btn btn-primary">Leer Contratapa</a>
-    </div>
-  </div>
+<div class="card-columns" *ngIf="!this.error">
+  <!--*ngFor="let libro of this.libros"-->
+  <app-witcher-list-card  [libro]="libro" *ngFor="let libro of this.libros"></app-witcher-list-card>
+</div>
+<div *ngIf="this.error" class="alert alert-danger" role="alert">
+  no se puedo cargar los libros, Error: {{this.codigo}}
 </div>
