se agrega pipe personalizado

--- a/src/app/Components/01 pipe section/main-father/main-father.component.html
+++ b/src/app/Components/01 pipe section/main-father/main-father.component.html
@@ -31,6 +31,11 @@
             <td>async</td>
             <td>{{this.promesa | async}}</td>
         </tr>
+        <tr>
+            <td>{{this.frase}}</td>
+            <td>contador personalizado</td>
+            <td>{{this.frase | contador:'letras'}}</td>
+        </tr>
         </tbody>
     </table>
 
