--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -14,6 +14,12 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/pipes-father']">Pipes Section</a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/music-home']">Music</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/search-spoti']">search music</a>
+      </li>
     </ul>
   </div>
   <form class="form-inline">
