--- a/src/app/Components/02 music app/music-home/music-home.component.html
+++ b/src/app/Components/02 music app/music-home/music-home.component.html
@@ -1,26 +1,4 @@
-<div *ngIf="this.CheckToken">
-  <br>
-  <div class="card text-white bg-dark mb-3">
-    <div class="card-body">
-      <div class="card-text">
-        <span style="color:white">ingresar token de logeo de spotify</span>
-        <div class="row">
-          <div class="col">
-              <input [(ngModel)]="this.tokeninput" type="text" class="form-control">
-          </div>
-          <div class="col">
-              <button (click)="enviarToken()" type="button" class="btn btn-success">enviar token</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>  
+<app-input-token (CheckValido)="this.ConsultarAPI($event)"></app-input-token> 
 
-<app-album-card [canciones]="this.canciones" *ngIf="!this.CheckToken"></app-album-card>
-
-<div *ngIf="this.CheckeError" class="alert alert-danger" role="alert">
-    Error: {{this.mensajeError}} <br>
-    Codigo: {{this.codigoError}} 
-</div>
+<app-album-card [canciones]="this.canciones" *ngIf="this.CheckToken"></app-album-card>
 
