--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -20,6 +20,9 @@
       <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/search-spoti']">search music</a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/miscelaneos']">miscelaneos</a>
+    </li>
     </ul>
   </div>
   <form class="form-inline">
