--- a/src/app/Components/witcher-list/witcher-list.component.html
+++ b/src/app/Components/witcher-list/witcher-list.component.html
@@ -2,6 +2,9 @@
   <h1 class="display-4">Lista de Gerald De Rivia</h1>
   <p class="lead">todos las novelas de Gerarld de Rivia o The Witcher </p>
 </div>
+
+<app-loading *ngIf="this.loading"></app-loading>
+
 <div class="card-columns" *ngIf="!this.error">
   <!--*ngFor="let libro of this.libros"-->
   <app-witcher-list-card  [libro]="libro" *ngFor="let libro of this.libros"></app-witcher-list-card>
