--- a/src/app/Components/witcher-list-card/witcher-list-card.component.html
+++ b/src/app/Components/witcher-list-card/witcher-list-card.component.html
@@ -1,7 +1,7 @@
 <div class="card" style="width: 18rem;" >
 
 
-    <img [src]="../PracticaUdemy/assets/libro.img" class="card-img-top" [alt]="libro.img" height="381.33px">
+    <img [src]="libro.img" class="card-img-top" [alt]="libro.img" height="381.33px">
     <div class="card-body">
       <h5 class="card-title">{{libro.titulo}}</h5>
       <div class="card-text">
